--- a/app/globals.css
+++ b/app/globals.css
@@ -2,6 +2,13 @@
 @tailwind components;
 @tailwind utilities;
 
+@font-face {
+  font-family: 'Inconsolata';
+  src: url('/fonts/inconsolata.regular.ttf') format('truetype');
+  font-weight: 400;
+  font-style: normal;
+}
+
 @layer base {
   :root {
     --background: 0 0% 100%;
@@ -72,5 +79,6 @@
   }
   body {
     @apply bg-background text-foreground;
+    font-family: 'Inconsolata', monospace;
   }
 }
